gl_ext_api.h


typedef char GLbyte;

typedef char GLcharARB;

typedef double GLdouble;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned char GLubyte;

typedef unsigned int GLenum;

typedef unsigned int GLhandleARB;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef unsigned short GLushort;

typedef void GLvoid;


void VertexAttrib1dARB(GLuint, GLdouble);

void VertexAttrib1dvARB(GLuint, const GLdouble *);

void VertexAttrib1fARB(GLuint, GLfloat);

void VertexAttrib1fvARB(GLuint, const GLfloat *);

void VertexAttrib1sARB(GLuint, GLshort);

void VertexAttrib1svARB(GLuint, const GLshort *);

void VertexAttrib2dARB(GLuint, GLdouble, GLdouble);

void VertexAttrib2dvARB(GLuint, const GLdouble *);

void VertexAttrib2fARB(GLuint, GLfloat, GLfloat);

void VertexAttrib2fvARB(GLuint, const GLfloat *);

void VertexAttrib2sARB(GLuint, GLshort, GLshort);

void VertexAttrib2svARB(GLuint, const GLshort *);

void VertexAttrib3dARB(GLuint, GLdouble, GLdouble, GLdouble);

void VertexAttrib3dvARB(GLuint, const GLdouble *);

void VertexAttrib3fARB(GLuint, GLfloat, GLfloat, GLfloat);

void VertexAttrib3fvARB(GLuint, const GLfloat *);

void VertexAttrib3sARB(GLuint, GLshort, GLshort, GLshort);

void VertexAttrib3svARB(GLuint, const GLshort *);

void VertexAttrib4NbvARB(GLuint, const GLbyte *);

void VertexAttrib4NivARB(GLuint, const GLint *);

void VertexAttrib4NsvARB(GLuint, const GLshort *);

void VertexAttrib4NubARB(GLuint, GLubyte, GLubyte, GLubyte, GLubyte);

void VertexAttrib4NubvARB(GLuint, const GLubyte *);

void VertexAttrib4NuivARB(GLuint, const GLuint *);

void VertexAttrib4NusvARB(GLuint, const GLushort *);

void VertexAttrib4bvARB(GLuint, const GLbyte *);

void VertexAttrib4dARB(GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void VertexAttrib4dvARB(GLuint, const GLdouble *);

void VertexAttrib4fARB(GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void VertexAttrib4fvARB(GLuint, const GLfloat *);

void VertexAttrib4ivARB(GLuint, const GLint *);

void VertexAttrib4sARB(GLuint, GLshort, GLshort, GLshort, GLshort);

void VertexAttrib4svARB(GLuint, const GLshort *);

void VertexAttrib4ubvARB(GLuint, const GLubyte *);

void VertexAttrib4uivARB(GLuint, const GLuint *);

void VertexAttrib4usvARB(GLuint, const GLushort *);

void VertexAttribPointerARB(GLuint, GLint, GLenum, GLboolean, GLsizei, const GLvoid *);

void EnableVertexAttribArrayARB(GLuint);

void DisableVertexAttribArrayARB(GLuint);

void GetVertexAttribdvARB(GLuint, GLenum, GLdouble *);

void GetVertexAttribfvARB(GLuint, GLenum, GLfloat *);

void GetVertexAttribivARB(GLuint, GLenum, GLint *);

void GetVertexAttribPointervARB(GLuint, GLenum, GLvoid* *);

void Uniform2ivARB(GLint, GLsizei, GLint *);

void Uniform3ivARB(GLint, GLsizei, GLint *);

void Uniform4ivARB(GLint, GLsizei, GLint *);

void UniformMatrix2fvARB(GLint, GLsizei, GLboolean, GLfloat *);

void UniformMatrix3fvARB(GLint, GLsizei, GLboolean, GLfloat *);

void UniformMatrix4fvARB(GLint, GLsizei, GLboolean, GLfloat *);

void GetObjectParameterfvARB(GLhandleARB, GLenum, GLfloat *);

void GetObjectParameterivARB(GLhandleARB, GLenum, GLint *);

void GetInfoLogARB(GLhandleARB, GLsizei, GLsizei *, GLcharARB *);

void GetAttachedObjectsARB(GLhandleARB, GLsizei, GLsizei *, GLhandleARB *);

GLint GetUniformLocationARB(GLhandleARB, const GLcharARB *);

void GetActiveUniformARB(GLhandleARB, GLuint, GLsizei, GLsizei *, GLint *, GLenum *, GLcharARB *);

void GetUniformfvARB(GLhandleARB, GLint, GLfloat *);

void GetUniformivARB(GLhandleARB, GLint, GLint *);

void GetShaderSourceARB(GLhandleARB, GLsizei, GLsizei *, GLcharARB *);


void VertexAttrib1fARB(GLuint, GLfloat);

void VertexAttrib1sARB(GLuint, GLshort);

void VertexAttrib1dARB(GLuint, GLdouble);

void VertexAttrib2fARB(GLuint, GLfloat, GLfloat);

void VertexAttrib2sARB(GLuint, GLshort, GLshort);

void VertexAttrib2dARB(GLuint, GLdouble, GLdouble);

void VertexAttrib3fARB(GLuint, GLfloat, GLfloat, GLfloat);

void VertexAttrib3sARB(GLuint, GLshort, GLshort, GLshort);

void VertexAttrib3dARB(GLuint, GLdouble, GLdouble, GLdouble);

void VertexAttrib4fARB(GLuint, GLfloat, GLfloat, GLfloat, GLfloat);

void VertexAttrib4sARB(GLuint, GLshort, GLshort, GLshort, GLshort);

void VertexAttrib4dARB(GLuint, GLdouble, GLdouble, GLdouble, GLdouble);

void VertexAttrib4NubARB(GLuint, GLubyte, GLubyte, GLubyte, GLubyte);

void VertexAttrib1fvARB(GLuint, const GLfloat *);

void VertexAttrib1svARB(GLuint, const GLshort *);

void VertexAttrib1dvARB(GLuint, const GLdouble *);

void VertexAttrib2fvARB(GLuint, const GLfloat *);

void VertexAttrib2svARB(GLuint, const GLshort *);

void VertexAttrib2dvARB(GLuint, const GLdouble *);

void VertexAttrib3fvARB(GLuint, const GLfloat *);

void VertexAttrib3svARB(GLuint, const GLshort *);

void VertexAttrib3dvARB(GLuint, const GLdouble *);

void VertexAttrib4fvARB(GLuint, const GLfloat *);

void VertexAttrib4svARB(GLuint, const GLshort *);

void VertexAttrib4dvARB(GLuint, const GLdouble *);

void VertexAttrib4ivARB(GLuint, const GLint *);

void VertexAttrib4bvARB(GLuint, const GLbyte *);

void VertexAttrib4ubvARB(GLuint, const GLubyte *);

void VertexAttrib4usvARB(GLuint, const GLushort *);

void VertexAttrib4uivARB(GLuint, const GLuint *);

void VertexAttrib4NbvARB(GLuint, const GLbyte *);

void VertexAttrib4NsvARB(GLuint, const GLshort *);

void VertexAttrib4NivARB(GLuint, const GLint *);

void VertexAttrib4NubvARB(GLuint, const GLubyte *);

void VertexAttrib4NusvARB(GLuint, const GLushort *);

void VertexAttrib4NuivARB(GLuint, const GLuint *);

void VertexAttribPointerARB(GLuint, GLint, GLenum, GLboolean, GLsizei, const GLvoid *);

void EnableVertexAttribArrayARB(GLuint);

void DisableVertexAttribArrayARB(GLuint);

void BindAttribLocationARB(GLhandleARB, GLuint, const GLcharARB *);

void GetActiveAttribARB(GLhandleARB, GLuint, GLsizei, GLsizei *, GLint *, GLenum *, GLcharARB *);

GLint GetAttribLocationARB(GLhandleARB, const GLcharARB *);

void GetVertexAttribdvARB(GLuint, GLenum, GLdouble *);

void GetVertexAttribfvARB(GLuint, GLenum, GLfloat *);

void GetVertexAttribivARB(GLuint, GLenum, GLint *);

void GetVertexAttribPointervARB(GLuint, GLenum, GLvoid **);


void DrawBuffersARB(GLsizei n, const GLenum *bufs);


void ClampColorARB(GLenum, GLenum clamp);


void DrawArraysInstancedARB(GLenum, GLint, GLsizei, GLsizei);

void DrawElementsInstancedARB(GLenum, GLsizei, GLenum, const GLvoid *, GLsizei);


GLboolean IsRenderbuffer(GLuint);

void BindRenderbuffer(GLenum, GLuint);

void DeleteRenderbuffers(GLsizei, const GLuint *);

void GenRenderbuffers(GLsizei, GLuint *);

void RenderbufferStorage(GLenum, GLenum, GLsizei, GLsizei);

void GetRenderbufferParameteriv(GLenum, GLenum, GLint *);

GLboolean IsFramebuffer(GLuint);

void BindFramebuffer(GLenum, GLuint);

void DeleteFramebuffers(GLsizei, const GLuint *);

void GenFramebuffers(GLsizei, GLuint *);

GLenum CheckFramebufferStatus(GLenum);

void FramebufferTexture1D(GLenum, GLenum, GLenum, GLuint, GLint);

void FramebufferTexture2D(GLenum, GLenum, GLenum, GLuint, GLint);