gl_ext_api.scm

    (define Uniform2ivARB
      (foreign-lambda
        void
        "Uniform2ivARB"
        integer
        unsigned-integer
        s32vector)))
  (begin
    (define Uniform3ivARB
      (foreign-lambda
        void
        "Uniform3ivARB"
        integer
        unsigned-integer
        s32vector)))
  (begin
    (define Uniform4ivARB
      (foreign-lambda
        void
        "Uniform4ivARB"
        integer
        unsigned-integer
        s32vector)))
  (begin
    (define UniformMatrix2fvARB
      (foreign-lambda
        void
        "UniformMatrix2fvARB"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix3fvARB
      (foreign-lambda
        void
        "UniformMatrix3fvARB"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define UniformMatrix4fvARB
      (foreign-lambda
        void
        "UniformMatrix4fvARB"
        integer
        unsigned-integer
        unsigned-char
        f32vector)))
  (begin
    (define GetObjectParameterfvARB
      (foreign-lambda
        void
        "GetObjectParameterfvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetObjectParameterivARB
      (foreign-lambda
        void
        "GetObjectParameterivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetInfoLogARB
      (foreign-lambda
        void
        "GetInfoLogARB"
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define GetAttachedObjectsARB
      (foreign-lambda
        void
        "GetAttachedObjectsARB"
        unsigned-integer
        unsigned-integer
        u32vector
        u32vector)))
  (begin
    (define GetUniformLocationARB
      (foreign-lambda
        integer
        "GetUniformLocationARB"
        unsigned-integer
        c-string)))
  (begin
    (define GetActiveUniformARB
      (foreign-lambda
        void
        "GetActiveUniformARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        u32vector
        s32vector
        u32vector
        c-string)))
  (begin
    (define GetUniformfvARB
      (foreign-lambda
        void
        "GetUniformfvARB"
        unsigned-integer
        integer
        f32vector)))
  (begin
    (define GetUniformivARB
      (foreign-lambda
        void
        "GetUniformivARB"
        unsigned-integer
        integer
        s32vector)))
  (begin
    (define GetShaderSourceARB
      (foreign-lambda
        void
        "GetShaderSourceARB"
        unsigned-integer
        unsigned-integer
        u32vector
        c-string)))
  (begin
    (define VertexAttrib1fARB
      (foreign-lambda void "VertexAttrib1fARB" unsigned-integer float)))
  (begin
    (define VertexAttrib1sARB
      (foreign-lambda void "VertexAttrib1sARB" unsigned-integer short)))
  (begin
    (define VertexAttrib1dARB
      (foreign-lambda void "VertexAttrib1dARB" unsigned-integer double)))
  (begin
    (define VertexAttrib2fARB
      (foreign-lambda void "VertexAttrib2fARB" unsigned-integer float float)))
  (begin
    (define VertexAttrib2sARB
      (foreign-lambda void "VertexAttrib2sARB" unsigned-integer short short)))
  (begin
    (define VertexAttrib2dARB
      (foreign-lambda
        void
        "VertexAttrib2dARB"
        unsigned-integer
        double
        double)))
  (begin
    (define VertexAttrib3fARB
      (foreign-lambda
        void
        "VertexAttrib3fARB"
        unsigned-integer
        float
        float
        float)))
  (begin
    (define VertexAttrib3sARB
      (foreign-lambda
        void
        "VertexAttrib3sARB"
        unsigned-integer
        short
        short
        short)))
  (begin
    (define VertexAttrib3dARB
      (foreign-lambda
        void
        "VertexAttrib3dARB"
        unsigned-integer
        double
        double
        double)))
  (begin
    (define VertexAttrib4fARB
      (foreign-lambda
        void
        "VertexAttrib4fARB"
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define VertexAttrib4sARB
      (foreign-lambda
        void
        "VertexAttrib4sARB"
        unsigned-integer
        short
        short
        short
        short)))
  (begin
    (define VertexAttrib4dARB
      (foreign-lambda
        void
        "VertexAttrib4dARB"
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define VertexAttrib4NubARB
      (foreign-lambda
        void
        "VertexAttrib4NubARB"
        unsigned-integer
        unsigned-char
        unsigned-char
        unsigned-char
        unsigned-char)))
  (begin
    (define VertexAttrib1fvARB
      (foreign-lambda void "VertexAttrib1fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib1svARB
      (foreign-lambda void "VertexAttrib1svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib1dvARB
      (foreign-lambda void "VertexAttrib1dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib2fvARB
      (foreign-lambda void "VertexAttrib2fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib2svARB
      (foreign-lambda void "VertexAttrib2svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib2dvARB
      (foreign-lambda void "VertexAttrib2dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib3fvARB
      (foreign-lambda void "VertexAttrib3fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib3svARB
      (foreign-lambda void "VertexAttrib3svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib3dvARB
      (foreign-lambda void "VertexAttrib3dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib4fvARB
      (foreign-lambda void "VertexAttrib4fvARB" unsigned-integer f32vector)))
  (begin
    (define VertexAttrib4svARB
      (foreign-lambda void "VertexAttrib4svARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4dvARB
      (foreign-lambda void "VertexAttrib4dvARB" unsigned-integer f64vector)))
  (begin
    (define VertexAttrib4ivARB
      (foreign-lambda void "VertexAttrib4ivARB" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4bvARB
      (foreign-lambda void "VertexAttrib4bvARB" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4ubvARB
      (foreign-lambda void "VertexAttrib4ubvARB" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4usvARB
      (foreign-lambda void "VertexAttrib4usvARB" unsigned-integer u16vector)))
  (begin
    (define VertexAttrib4uivARB
      (foreign-lambda void "VertexAttrib4uivARB" unsigned-integer u32vector)))
  (begin
    (define VertexAttrib4NbvARB
      (foreign-lambda void "VertexAttrib4NbvARB" unsigned-integer c-string)))
  (begin
    (define VertexAttrib4NsvARB
      (foreign-lambda void "VertexAttrib4NsvARB" unsigned-integer s16vector)))
  (begin
    (define VertexAttrib4NivARB
      (foreign-lambda void "VertexAttrib4NivARB" unsigned-integer s32vector)))
  (begin
    (define VertexAttrib4NubvARB
      (foreign-lambda void "VertexAttrib4NubvARB" unsigned-integer u8vector)))
  (begin
    (define VertexAttrib4NusvARB
      (foreign-lambda void "VertexAttrib4NusvARB" unsigned-integer u16vector)))
  (begin
    (define VertexAttrib4NuivARB
      (foreign-lambda void "VertexAttrib4NuivARB" unsigned-integer u32vector)))
  (begin
    (define VertexAttribPointerARB
      (foreign-lambda
        void
        "VertexAttribPointerARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-char
        unsigned-integer
        (c-pointer void))))
  (begin
    (define EnableVertexAttribArrayARB
      (foreign-lambda void "EnableVertexAttribArrayARB" unsigned-integer)))
  (begin
    (define DisableVertexAttribArrayARB
      (foreign-lambda void "DisableVertexAttribArrayARB" unsigned-integer)))
  (begin
    (define BindAttribLocationARB
      (foreign-lambda
        void
        "BindAttribLocationARB"
        unsigned-integer
        unsigned-integer
        c-string)))
  (begin
    (define GetActiveAttribARB
      (foreign-lambda
        void
        "GetActiveAttribARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        u32vector
        s32vector
        u32vector
        c-string)))
  (begin
    (define GetAttribLocationARB
      (foreign-lambda
        integer
        "GetAttribLocationARB"
        unsigned-integer
        c-string)))
  (begin
    (define GetVertexAttribdvARB
      (foreign-lambda
        void
        "GetVertexAttribdvARB"
        unsigned-integer
        unsigned-integer
        f64vector)))
  (begin
    (define GetVertexAttribfvARB
      (foreign-lambda
        void
        "GetVertexAttribfvARB"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetVertexAttribivARB
      (foreign-lambda
        void
        "GetVertexAttribivARB"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetVertexAttribPointervARB
      (foreign-lambda
        void
        "GetVertexAttribPointervARB"
        unsigned-integer
        unsigned-integer
        (c-pointer (c-pointer void)))))
  (begin
    (define DrawBuffersARB
      (foreign-lambda void "DrawBuffersARB" unsigned-integer u32vector)))
  (begin
    (define ClampColorARB
      (foreign-lambda void "ClampColorARB" unsigned-integer unsigned-integer)))
  (begin
    (define DrawArraysInstancedARB
      (foreign-lambda
        void
        "DrawArraysInstancedARB"
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DrawElementsInstancedARB
      (foreign-lambda
        void
        "DrawElementsInstancedARB"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        unsigned-integer)))
  (begin
    (define IsRenderbuffer
      (foreign-lambda unsigned-char "IsRenderbuffer" unsigned-integer)))
  (begin
    (define BindRenderbuffer
      (foreign-lambda
        void
        "BindRenderbuffer"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DeleteRenderbuffers
      (foreign-lambda void "DeleteRenderbuffers" unsigned-integer u32vector)))
  (begin
    (define GenRenderbuffers
      (foreign-lambda void "GenRenderbuffers" unsigned-integer u32vector)))
  (begin
    (define RenderbufferStorage
      (foreign-lambda
        void
        "RenderbufferStorage"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define GetRenderbufferParameteriv
      (foreign-lambda
        void
        "GetRenderbufferParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define IsFramebuffer
      (foreign-lambda unsigned-char "IsFramebuffer" unsigned-integer)))
  (begin
    (define BindFramebuffer
      (foreign-lambda
        void
        "BindFramebuffer"
        unsigned-integer
        unsigned-integer)))
  (begin
    (define DeleteFramebuffers
      (foreign-lambda void "DeleteFramebuffers" unsigned-integer u32vector)))
  (begin
    (define GenFramebuffers
      (foreign-lambda void "GenFramebuffers" unsigned-integer u32vector)))
  (begin
    (define CheckFramebufferStatus
      (foreign-lambda
        unsigned-integer
        "CheckFramebufferStatus"
        unsigned-integer)))
  (begin
    (define FramebufferTexture1D
      (foreign-lambda
        void
        "FramebufferTexture1D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define FramebufferTexture2D
      (foreign-lambda
        void
        "FramebufferTexture2D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
